--- a/.htaccess
+++ b/.htaccess
@@ -23,7 +23,9 @@ RewriteCond %{SERVER_PORT} 80
 RewriteEngine On
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-#RewriteRule (.*)index\.html$ /$1 [NS,R=301,L]
+RewriteRule (.*)index\.html$ /$1 [NS,R=301,L]
+
+#RewriteRule ^(.*)index.html$   %{CONTEXT_PREFIX}/$1       [R=301,L]
 ErrorDocument 404 /404page.html
 Redirect 301 /colores.html https://www.topciment.com/sistemas/sttandard-microcemento-bicomponente.html#colores
 Redirect 301 /sttandard.html https://www.topciment.com/sistemas/sttandard-microcemento-bicomponente.html
